working on preventing overlap in nav bar

--- a/src/components/Header/Nav/Nav.css
+++ b/src/components/Header/Nav/Nav.css
@@ -13,11 +13,10 @@
 }
 .navBrand {
   padding-right: 3px !important;
-  position: absolute !important;
 }
-.navItem {
+/* .navItem {
   position: relative !important;
-}
+} */
 a {
   color: black !important;
 }
